* Use model singleton to define which party sequence to use
* Improve search_rec_name of category to take care of separator

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Add CheckVIES wizard (VAT Information Exchange System)
* Add default categories on party with context
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release